Use Stream.toList() instead of Collectors.toList()
Signed-off-by: Jacob Laursen <jacob-github@vindvejr.dk>